--- a/src/LoginComponent/Logins.css
+++ b/src/LoginComponent/Logins.css
@@ -130,41 +130,45 @@
     margin: 10px 0px;
   }
   
-  .othentication {
+  .othentication-1 {
     display: flex;
     justify-content: center;
-    width: 100%;
     margin: 7px;
     
   }
-  .othentication .google{
-    margin-right: 37px;
+  .othentication-1 .google-1{
+    margin-right: 30px;
   }
   
-  .othentication .facebook{
-    margin-right: 10px;
+  .othentication-1 .facebook-1{
+    margin-right: 8px;
     padding-left: 10px;
   
   }
   
-  .google, .facebook{
-   width:110px ;
-   border-radius: 8px;
-    border: 1px solid #DEDFEE; 
+  .google-1, .facebook-1{
+    width: 110px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border-radius: 8px;
+    border: 1px solid #DEDFEE;
     background-color: transparent;
+    height: 32px;
   
   }
-  .othentication button{
-    padding: 10px;
+  .othentication-1 button{
     border: none;
     background-color: transparent;
     text-align: center;
-    align-items: center;
+    margin-top: 40px;
   }
-  .othentication img{
+  .othentication-1 img{
     width: 15px;
-    height: 18px;
-    padding-top: 5px;
+  }
+  .google-log{
+    margin-left: 10px;
   }
  
   hr{
